Bug 358119 - contextualActionsAboutToShow not working in system tray
Summary: contextualActionsAboutToShow not working in system tray
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-17 11:45 UTC by Kai Uwe Broulik
Modified: 2016-03-01 15:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2016-01-17 11:45:44 UTC
When an applet is inside system tray Plasmoid.onContextualActionsAboutToShow is not emitted because the system tray does not do that and I also couldn't find a way to access the applet interface from the applet to fix this.

Reproducible: Always
Comment 1 David Edmundson 2016-03-01 15:40:36 UTC
Git commit 109f6cfca5ef9c0266a555c6cd68babb3257ce2d by David Edmundson.
Committed on 01/03/2016 at 15:38.
Pushed by davidedmundson into branch 'master'.

Emit contextualAppletsAboutToShow in systemtray

Normally done by the containment interface
REVIEW: 126811

M  +5    -0    applets/systemtray/plugin/protocols/plasmoid/plasmoidtask.cpp

http://commits.kde.org/plasma-workspace/109f6cfca5ef9c0266a555c6cd68babb3257ce2d