Emit contextualAppletsAboutToShow in systemtray

Normally done by the containment interface

BUG: 358119
REVIEW: 126811